# Rust

./: .gitignore
1.1 - Установка/: Установка.txt
1.2 - hello_world/: main.rs
1.3 - hello_Cargo/hello_cargo/: Cargo.toml
1.3 - hello_Cargo/hello_cargo/src/: main.rs
2.0 - guessing_game/guessing_game/: Cargo.toml
3.1 - variables/variables/: Cargo.toml
3.1 - variables/variables/src/: main.rs
3.2 - Типы данных/data_types/: Cargo.toml
3.2 - Типы данных/data_types/src/: main.rs
3.3 - Функции/functions/: Cargo.toml
3.3 - Функции/functions/src/: main.rs
3.5 - Контроль выполнения программы/control_flow/: Cargo.toml
3.5 - Контроль выполнения программы/control_flow/src/: main.rs
4.1 - Владение(Ownership)/ownership/: Cargo.toml
4.1 - Владение(Ownership)/ownership/src/: main.rs
4.2 - Ссылки и заимствования(references and borrowing)/references_and_borrowing/: Cargo.toml
4.3 - Срезы(slices)/slices/: Cargo.toml
4.3 - Срезы(slices)/slices/src/: main.rs
5.1 - Структуры/structs/: Cargo.toml
5.2 - Пример использования структур/rectangles/: Cargo.toml
5.3 - Методы/methods/: Cargo.toml
6.1 - Перечисления(enums)/enums/: Cargo.toml
6.2 - match/match_expression/: Cargo.toml
6.3 - if let/if_let/: Cargo.toml
7.1 - Пакеты и крейты(packages and crates)/packages_and_crates/: Cargo.toml
7.2 - Модули/modules/: Cargo.toml
8.1 - Вектор/vectors/: Cargo.toml
8.2 - Строки/strings/: Cargo.toml
8.3 - HashMap/hashmaps/: Cargo.toml
9.0 - Обработка ошибок/error_handling/: Cargo.toml
9.1 - Неустраняемые ошибки(panic!)/unrecoverable_errors/: Cargo.toml
(+15 files in other folders)
