[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["Yunus <yunus@fastmail.com>"]
# Новые версии Rust выходят каждые 6 недель. По мере накопления большого количества изменений
# происходит выделение Rust в отдельную версию. Пока существуют только две версии Rust: 2015
# и 2018.
edition = "2018"

[dependencies]
# Здесь указываются зависимости программы.
